@@ -19,6 +19,7 @@
 * Removed unnecessary calls to file_check_or_generate_cache in
   lib/misc/checks/*
 * Updated symlinks for different types of scan
+* Removed tools/banned.h
 
 -- Tim Brown <timb@nth-dimension.org.uk>
 
